# oss-trust-demo

./: .gitignore  README.md  SECURITY.md  check_all.py  check_fixed.py  check_osv.py  framework_deps.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: trusted_publishers.yaml
docs/: index.html
src/: demo.py
tests/: conftest.py  test_check_all.py  test_gate1_age.py  test_gate3_trust.py  test_gate5_behavioral.py  test_integration.py  test_scenarios.py  test_zeroday_lane.py
