[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oss-trust-demo"
version = "0.1.0"
description = "Demo application for testing the OSS Trust Framework"
requires-python = ">=3.11"
dependencies = [
    "oss-trust-framework>=0.2.0",
    "requests>=2.32.3",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
demo = "demo.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
